[gd_scene load_steps=16 format=2]

[ext_resource path="res://src/TypeFont.tres" type="DynamicFont" id=1]
[ext_resource path="res://src/Player.gd" type="Script" id=2]
[ext_resource path="res://src/GUI.gd" type="Script" id=3]
[ext_resource path="res://Assets/TileSet/Base/MainPiece.png" type="Texture" id=4]
[ext_resource path="res://Assets/LevelText.png" type="Texture" id=5]
[ext_resource path="res://Assets/TileSet/Base/GoalOutline.png" type="Texture" id=6]
[ext_resource path="res://src/settingsIcon.png" type="Texture" id=7]
[ext_resource path="res://src/helpIcon.png" type="Texture" id=8]
[ext_resource path="res://Assets/TileSet/Base/TileAttack.png" type="Texture" id=9]
[ext_resource path="res://Assets/TileSet/Base/TileMove.png" type="Texture" id=10]
[ext_resource path="res://Assets/TileSet/Base/TileBlack.png" type="Texture" id=11]
[ext_resource path="res://Assets/TileSet/Base/TileWhite.png" type="Texture" id=12]
[ext_resource path="res://src/QUIT.gd" type="Script" id=13]
[ext_resource path="res://Assets/Menu/Quit.png" type="Texture" id=14]

[sub_resource type="StyleBoxFlat" id=1]
bg_color = Color( 0.576471, 0.576471, 0.576471, 1 )
border_width_left = 5
border_width_top = 5
border_width_right = 5
border_width_bottom = 5
corner_radius_top_left = 4
corner_radius_top_right = 4
corner_radius_bottom_right = 4
corner_radius_bottom_left = 4
corner_detail = 10

[node name="GameBoard" type="Node2D"]

[node name="GUI" type="MarginContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = -2.0
margin_right = 1080.0
margin_bottom = 1918.0
size_flags_vertical = 2
custom_constants/margin_right = 100
custom_constants/margin_top = 100
custom_constants/margin_left = 100
custom_constants/margin_bottom = 100
script = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Background" type="ColorRect" parent="GUI"]
margin_left = 100.0
margin_top = 100.0
margin_right = 980.0
margin_bottom = 1820.0
rect_min_size = Vector2( 108, 192 )
color = Color( 0.117647, 0.247059, 0.486275, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Seperator1" type="VBoxContainer" parent="GUI/Background"]
margin_right = 880.0
margin_bottom = 1240.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TopTools" type="VBoxContainer" parent="GUI/Background/Seperator1"]
margin_right = 880.0
margin_bottom = 62.0

[node name="Top Bar" type="HBoxContainer" parent="GUI/Background/Seperator1/TopTools"]
margin_right = 880.0
margin_bottom = 62.0

[node name="Level Info" type="HBoxContainer" parent="GUI/Background/Seperator1/TopTools/Top Bar"]
margin_right = 181.0
margin_bottom = 62.0

[node name="Level" type="TextureRect" parent="GUI/Background/Seperator1/TopTools/Top Bar/Level Info"]
margin_right = 159.0
margin_bottom = 62.0
size_flags_horizontal = 3
size_flags_vertical = 3
texture = ExtResource( 5 )
stretch_mode = 4
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Level Number" type="Label" parent="GUI/Background/Seperator1/TopTools/Top Bar/Level Info"]
margin_left = 163.0
margin_right = 181.0
margin_bottom = 62.0
custom_fonts/font = ExtResource( 1 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "1"
align = 2
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MovesCounter" type="HBoxContainer" parent="GUI/Background/Seperator1/TopTools/Top Bar"]
margin_left = 185.0
margin_right = 440.0
margin_bottom = 62.0

[node name="Moves" type="Label" parent="GUI/Background/Seperator1/TopTools/Top Bar/MovesCounter"]
margin_right = 214.0
margin_bottom = 62.0
custom_fonts/font = ExtResource( 1 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "Moves:"
align = 1
valign = 1

[node name="Move Number" type="Label" parent="GUI/Background/Seperator1/TopTools/Top Bar/MovesCounter"]
margin_left = 218.0
margin_right = 255.0
margin_bottom = 62.0
custom_fonts/font = ExtResource( 1 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "0"
align = 1
valign = 1

[node name="Return" type="Label" parent="GUI/Background/Seperator1/TopTools/Top Bar"]
margin_left = 444.0
margin_right = 606.0
margin_bottom = 62.0
custom_fonts/font = ExtResource( 1 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "Menu"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Panel" type="Panel" parent="GUI/Background/Seperator1/TopTools/Top Bar/Return"]
show_behind_parent = true
anchor_right = 1.0
anchor_bottom = 1.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_styles/panel = SubResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="GameboardBackground" type="ColorRect" parent="GUI/Background/Seperator1"]
margin_top = 66.0
margin_right = 880.0
margin_bottom = 1240.0
size_flags_horizontal = 3
size_flags_vertical = 3
color = Color( 0.396078, 0.368627, 0.368627, 1 )

[node name="helpIcon" type="TextureRect" parent="GUI/Background/Seperator1/GameboardBackground"]
margin_left = 729.567
margin_top = 1235.44
margin_right = 860.567
margin_bottom = 1387.44
texture = ExtResource( 8 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="settingsIcon" type="TextureRect" parent="GUI/Background/Seperator1/GameboardBackground"]
margin_left = 7.49155
margin_top = 1246.81
margin_right = 138.492
margin_bottom = 1377.81
texture = ExtResource( 7 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="GameBoard" type="GridContainer" parent="GUI/Background/Seperator1/GameboardBackground"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -400.0
margin_top = -400.0
margin_right = 400.0
margin_bottom = 400.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/vseparation = 0
custom_constants/hseparation = 0
columns = 4
__meta__ = {
"_edit_use_anchors_": false
}

[node name="GoalOutline" type="Sprite" parent="GUI/Background/Seperator1/GameboardBackground"]
position = Vector2( 40, 176 )
scale = Vector2( 2, 2 )
texture = ExtResource( 6 )
centered = false

[node name="Undo" type="Label" parent="GUI/Background/Seperator1/GameboardBackground"]
anchor_left = 1.0
anchor_right = 1.0
margin_left = -175.0
margin_bottom = 84.0
custom_fonts/font = ExtResource( 1 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "Undo"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="UndoBacking" type="Panel" parent="GUI/Background/Seperator1/GameboardBackground/Undo"]
show_behind_parent = true
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = -2.12828
margin_bottom = -2.12828
size_flags_horizontal = 3
size_flags_vertical = 3
custom_styles/panel = SubResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Restart" type="Label" parent="GUI/Background/Seperator1/GameboardBackground"]
anchor_left = 1.0
anchor_right = 1.0
margin_left = -880.0
margin_top = -4.0
margin_right = -705.0
margin_bottom = 53.0
custom_fonts/font = ExtResource( 1 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "Restart"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="RestartBacking" type="Panel" parent="GUI/Background/Seperator1/GameboardBackground/Restart"]
show_behind_parent = true
anchor_right = 1.0
anchor_bottom = 1.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_styles/panel = SubResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Player" type="Sprite" parent="."]
modulate = Color( 0.862745, 0.705882, 1, 1 )
position = Vector2( 488.538, 657.334 )
scale = Vector2( 2, 2 )
texture = ExtResource( 4 )
script = ExtResource( 2 )

[node name="Help Popup" type="Popup" parent="."]
margin_left = 100.0
margin_top = 98.0
margin_right = 980.0
margin_bottom = 1818.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="BackgroundFade" type="ColorRect" parent="Help Popup"]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0.117647, 0.247059, 0.486275, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ScrollContainer" type="ScrollContainer" parent="Help Popup/BackgroundFade"]
anchor_right = 1.0
anchor_bottom = 1.0
scroll_horizontal_enabled = false
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="Control" parent="Help Popup/BackgroundFade/ScrollContainer"]
margin_right = 880.0
margin_bottom = 1720.0
rect_min_size = Vector2( 880, 1600 )
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="TextEdit" type="TextEdit" parent="Help Popup/BackgroundFade/ScrollContainer/VBoxContainer"]
margin_right = 880.0
margin_bottom = 3000.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_fonts/font = ExtResource( 1 )
text = " How To Play:

 Goal - get the main piece to the goal square




 Click a piece to see its available moves and attacks
								
								Attack:
								
								
								Move:


 Don't get captured"
readonly = true
wrap_enabled = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureRect" type="TextureRect" parent="Help Popup/BackgroundFade/ScrollContainer/VBoxContainer"]
margin_left = 370.264
margin_top = 369.459
margin_right = 470.264
margin_bottom = 469.459
texture = ExtResource( 6 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureRect2" type="TextureRect" parent="Help Popup/BackgroundFade/ScrollContainer/VBoxContainer"]
modulate = Color( 0.862745, 0.705882, 1, 1 )
margin_left = 372.374
margin_top = 369.526
margin_right = 472.374
margin_bottom = 469.526
texture = ExtResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Control" type="Control" parent="Help Popup/BackgroundFade/ScrollContainer/VBoxContainer"]
margin_left = -171.556
margin_right = -131.556
margin_bottom = 40.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="GridContainer" type="GridContainer" parent="Help Popup/BackgroundFade/ScrollContainer/VBoxContainer/Control"]
margin_left = 285.0
margin_top = 743.0
margin_right = 593.0
margin_bottom = 1051.0
columns = 3
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureRect" type="TextureRect" parent="Help Popup/BackgroundFade/ScrollContainer/VBoxContainer/Control/GridContainer"]
margin_right = 100.0
margin_bottom = 100.0
texture = ExtResource( 12 )

[node name="TextureRect2" type="TextureRect" parent="Help Popup/BackgroundFade/ScrollContainer/VBoxContainer/Control/GridContainer"]
margin_left = 104.0
margin_right = 204.0
margin_bottom = 100.0
texture = ExtResource( 11 )

[node name="TextureRect3" type="TextureRect" parent="Help Popup/BackgroundFade/ScrollContainer/VBoxContainer/Control/GridContainer"]
margin_left = 208.0
margin_right = 308.0
margin_bottom = 100.0
texture = ExtResource( 12 )

[node name="TextureRect4" type="TextureRect" parent="Help Popup/BackgroundFade/ScrollContainer/VBoxContainer/Control/GridContainer"]
margin_top = 104.0
margin_right = 100.0
margin_bottom = 204.0
texture = ExtResource( 11 )

[node name="TextureRect5" type="TextureRect" parent="Help Popup/BackgroundFade/ScrollContainer/VBoxContainer/Control/GridContainer"]
margin_left = 104.0
margin_top = 104.0
margin_right = 204.0
margin_bottom = 204.0
texture = ExtResource( 12 )

[node name="TextureRect6" type="TextureRect" parent="Help Popup/BackgroundFade/ScrollContainer/VBoxContainer/Control/GridContainer"]
margin_left = 208.0
margin_top = 104.0
margin_right = 308.0
margin_bottom = 204.0
texture = ExtResource( 11 )

[node name="TextureRect7" type="TextureRect" parent="Help Popup/BackgroundFade/ScrollContainer/VBoxContainer/Control/GridContainer"]
margin_top = 208.0
margin_right = 100.0
margin_bottom = 308.0
texture = ExtResource( 12 )

[node name="TextureRect8" type="TextureRect" parent="Help Popup/BackgroundFade/ScrollContainer/VBoxContainer/Control/GridContainer"]
margin_left = 104.0
margin_top = 208.0
margin_right = 204.0
margin_bottom = 308.0
texture = ExtResource( 11 )

[node name="TextureRect9" type="TextureRect" parent="Help Popup/BackgroundFade/ScrollContainer/VBoxContainer/Control/GridContainer"]
margin_left = 208.0
margin_top = 208.0
margin_right = 308.0
margin_bottom = 308.0
texture = ExtResource( 12 )

[node name="TextureRect3" type="TextureRect" parent="Help Popup/BackgroundFade/ScrollContainer/VBoxContainer/Control"]
modulate = Color( 0.862745, 0.705882, 1, 1 )
margin_left = 388.846
margin_top = 951.884
margin_right = 488.846
margin_bottom = 1051.88
texture = ExtResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureRect4" type="TextureRect" parent="Help Popup/BackgroundFade/ScrollContainer/VBoxContainer/Control"]
modulate = Color( 1, 0, 0, 1 )
margin_left = 492.113
margin_top = 847.495
margin_right = 592.113
margin_bottom = 947.495
texture = ExtResource( 9 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureRect7" type="TextureRect" parent="Help Popup/BackgroundFade/ScrollContainer/VBoxContainer/Control"]
modulate = Color( 1, 0, 0, 1 )
margin_left = 563.747
margin_top = 596.269
margin_right = 663.747
margin_bottom = 696.269
rect_scale = Vector2( 4, 4 )
texture = ExtResource( 9 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureRect5" type="TextureRect" parent="Help Popup/BackgroundFade/ScrollContainer/VBoxContainer/Control"]
modulate = Color( 1, 0, 0, 1 )
margin_left = 288.947
margin_top = 846.372
margin_right = 388.947
margin_bottom = 946.372
texture = ExtResource( 9 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureRect6" type="TextureRect" parent="Help Popup/BackgroundFade/ScrollContainer/VBoxContainer/Control"]
modulate = Color( 0, 1, 0, 1 )
margin_left = 390.86
margin_top = 846.372
margin_right = 490.86
margin_bottom = 946.372
texture = ExtResource( 10 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureRect8" type="TextureRect" parent="Help Popup/BackgroundFade/ScrollContainer/VBoxContainer/Control"]
modulate = Color( 0, 1, 0, 1 )
margin_left = 542.313
margin_top = 798.264
margin_right = 642.313
margin_bottom = 898.264
rect_scale = Vector2( 4, 4 )
texture = ExtResource( 10 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Help Popup Exit" type="Label" parent="Help Popup/BackgroundFade"]
margin_left = 824.818
margin_top = 10.4881
margin_right = 864.818
margin_bottom = 72.4881
mouse_filter = 1
custom_fonts/font = ExtResource( 1 )
custom_colors/font_color = Color( 1, 0, 0, 1 )
text = "X"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Level Done Popup" type="Popup" parent="."]
margin_top = -2.0
margin_right = 1080.0
margin_bottom = 1918.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="BackgroundFade" type="ColorRect" parent="Level Done Popup"]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0, 0, 0, 0.4 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PopupBox" type="ColorRect" parent="Level Done Popup"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -250.0
margin_top = -150.0
margin_right = 250.0
margin_bottom = 150.0
color = Color( 0.576471, 0.576471, 0.576471, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextButtonSplit" type="VBoxContainer" parent="Level Done Popup/PopupBox"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -250.0
margin_top = -104.0
margin_right = 250.0
margin_bottom = 150.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CenterContainer" type="CenterContainer" parent="Level Done Popup/PopupBox/TextButtonSplit"]
margin_right = 500.0
margin_bottom = 84.0

[node name="ParContainer" type="HBoxContainer" parent="Level Done Popup/PopupBox/TextButtonSplit/CenterContainer"]
margin_left = 148.0
margin_top = 11.0
margin_right = 352.0
margin_bottom = 73.0

[node name="ParText" type="Label" parent="Level Done Popup/PopupBox/TextButtonSplit/CenterContainer/ParContainer"]
margin_right = 224.0
margin_bottom = 84.0
custom_fonts/font = ExtResource( 1 )
text = "PAR : "

[node name="ParValue" type="Label" parent="Level Done Popup/PopupBox/TextButtonSplit/CenterContainer/ParContainer"]
margin_left = 228.0
margin_right = 279.0
margin_bottom = 84.0
custom_fonts/font = ExtResource( 1 )
text = "0"

[node name="CenterContainer2" type="CenterContainer" parent="Level Done Popup/PopupBox/TextButtonSplit"]
margin_top = 88.0
margin_right = 500.0
margin_bottom = 172.0

[node name="MoveContainer" type="HBoxContainer" parent="Level Done Popup/PopupBox/TextButtonSplit/CenterContainer2"]
margin_left = 106.0
margin_top = 11.0
margin_right = 394.0
margin_bottom = 73.0

[node name="MoveText" type="Label" parent="Level Done Popup/PopupBox/TextButtonSplit/CenterContainer2/MoveContainer"]
margin_right = 338.0
margin_bottom = 84.0
custom_fonts/font = ExtResource( 1 )
text = "MOVES : "

[node name="MoveValue" type="Label" parent="Level Done Popup/PopupBox/TextButtonSplit/CenterContainer2/MoveContainer"]
margin_left = 342.0
margin_right = 393.0
margin_bottom = 84.0
custom_fonts/font = ExtResource( 1 )
text = "0"

[node name="ContinueButton" type="ColorRect" parent="Level Done Popup/PopupBox/TextButtonSplit"]
margin_top = 176.0
margin_right = 500.0
margin_bottom = 276.0
rect_min_size = Vector2( 390, 100 )
color = Color( 0.117647, 0.247059, 0.486275, 1 )

[node name="ContinueText" type="Label" parent="Level Done Popup/PopupBox/TextButtonSplit/ContinueButton"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_fonts/font = ExtResource( 1 )
text = "Next Level"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="QUIT" type="Button" parent="."]
margin_left = 370.919
margin_top = 1604.45
margin_right = 1050.92
margin_bottom = 1854.45
rect_scale = Vector2( 0.5, 0.5 )
icon = ExtResource( 14 )
script = ExtResource( 13 )
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="gui_input" from="GUI/Background/Seperator1/TopTools/Top Bar/Return/Panel" to="GUI" method="_on_Panel_gui_input"]
[connection signal="gui_input" from="GUI/Background/Seperator1/GameboardBackground/helpIcon" to="GUI" method="_on_helpIcon_gui_input"]
[connection signal="gui_input" from="GUI/Background/Seperator1/GameboardBackground/GameBoard" to="GUI" method="_on_GameBoard_gui_input"]
[connection signal="gui_input" from="GUI/Background/Seperator1/GameboardBackground/Undo/UndoBacking" to="GUI" method="_on_UndoBacking_gui_input"]
[connection signal="gui_input" from="GUI/Background/Seperator1/GameboardBackground/Restart/RestartBacking" to="GUI" method="_on_RestartBacking_gui_input"]
[connection signal="gui_input" from="Help Popup/BackgroundFade/Help Popup Exit" to="GUI" method="_on_Help_Popup_Exit_gui_input"]
[connection signal="gui_input" from="Level Done Popup/PopupBox/TextButtonSplit/ContinueButton" to="GUI" method="_on_ContinueButton_gui_input"]
[connection signal="pressed" from="QUIT" to="QUIT" method="_on_QUIT_pressed"]
